--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,10 @@
             <version>6.1.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-jdbc</artifactId>
+        </dependency>
 
     </dependencies>
 
